<resources>
    <string name="app_name">Minigolf Scores</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="action_delete">Löschen</string>

    <string name="create_course">Neuen Platz anlegen...</string>
    <string name="show_course_details">Platz anzeigen...</string>
    <string name="title_activity_create_course">Neuen Platz anlegen</string>
    <string name="play_round">Runde spielen!</string>
    <string name="stats">Statistiken...</string>
    <string name="holenames">Bahnen eingeben...</string>
    <string name="save_holenames">Bahnen speichern</string>

    <string name="save_round_confirm">Runde gespeichert</string>
    <string name="save_course_confirm">Platz gespeichert</string>
    <string name="save_hole_names_confirm">Bahnen gespeichert</string>

    <string name="last_training_hint">Letztes Training</string>

    <string name="club_hint">Verein</string>
    <string name="system_hint">System</string>
    <string name="street_hint">Strasse</string>
    <string name="street_number_hint">Hausnummer</string>
    <string name="zipcode_hint">PLZ</string>
    <string name="city_hint">Stadt</string>

    <string name="hole1_hint">Bahn 1</string>
    <string name="hole2_hint">Bahn 2</string>
    <string name="hole3_hint">Bahn 3</string>
    <string name="hole4_hint">Bahn 4</string>
    <string name="hole5_hint">Bahn 5</string>
    <string name="hole6_hint">Bahn 6</string>
    <string name="hole7_hint">Bahn 7</string>
    <string name="hole8_hint">Bahn 8</string>
    <string name="hole9_hint">Bahn 9</string>
    <string name="hole10_hint">Bahn 10</string>
    <string name="hole11_hint">Bahn 11</string>
    <string name="hole12_hint">Bahn 12</string>
    <string name="hole13_hint">Bahn 13</string>
    <string name="hole14_hint">Bahn 14</string>
    <string name="hole15_hint">Bahn 15</string>
    <string name="hole16_hint">Bahn 16</string>
    <string name="hole17_hint">Bahn 17</string>
    <string name="hole18_hint">Bahn 18</string>

    <string name="not_set">-</string>
    <string name="save_button">Speichern</string>
    <string name="title_activity_show_course_details">Platz anzeigen</string>
    <string name="title_activity_play_round">PlayRound</string>

    <string name="last_training">Letztes Training</string>
    <string name="all_rounds">Alle Runden bei</string>
    <string name="title_activity_statistics">Statistiken</string>
    <string name="rounds_total">Runden insgesamt:</string>
    <string name="average_total">Gesamtschnitt:</string>

    <string name="select_stats_spinner_prompt">Statistik wählen...</string>

    <string name="import_alert_title">Daten importieren?</string>
    <string name="import_message">Achtung, beim Import werden alle vorhandenen Daten gelöscht!</string>
    <string name="import_ok">Ok</string>
    <string name="import_cancel">Abbrechen</string>

    <string-array name="select_stats">
        <item>Alle Runden</item>
        <item>Alle Runden Detail</item>
        <item>Bahnen Durchschnitte</item>
        <item>Bahnen Durchschnitte sortiert</item>
    </string-array>
    <string name="title_activity_enter_hole_names">EnterHoleNames</string>
</resources>
